Upgrade to AMQ 7.1

--- a/src/main/resources/jndi.properties
+++ b/src/main/resources/jndi.properties
@@ -1,6 +1,6 @@
 java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialContextFactory
-#connectionFactory.ConnectionFactory=tcp://localhost:61616?QUEUE_CF
-#connectionFactory.ConnectionFactory=udp://231.7.7.7:9876?QUEUE_CF
 connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF
+#connectionFactory.ConnectionFactory=udp://231.7.7.7:9876?QUEUE_CF
+#connectionFactory.ConnectionFactory=failover:(tcp://jess:61616F,tcp://aza:61616)
 queue.jms/queue/inQueue=inQueue
 queue.jms/queue/testQueue=testQueue
