--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
    <groupId>org.activemq.jms.queue.producer</groupId>
    <artifactId>artemis-jms-queue-producer</artifactId>
-   <version>1.0-SNAPSHOT</version>
+   <version>7.1.0</version>
 
    <properties>
 
@@ -18,7 +18,7 @@
       <jboss.logging.version>3.3.1.Final-redhat-1</jboss.logging.version>
       <jboss.log.manager.version>2.0.7.Final-redhat-1</jboss.log.manager.version>
 
-      <artemis.client.version>2.0.0.amq-700013-redhat-1</artemis.client.version>
+      <artemis.client.version>2.4.0.amq-710004-redhat-1</artemis.client.version>
 
       <!-- maven-jar-plugin -->
       <jar.plugin.version>3.0.2</jar.plugin.version>
@@ -109,9 +109,33 @@
             </plugin>
 
             <plugin>
+               <groupId>org.codehaus.mojo</groupId>
+               <artifactId>exec-maven-plugin</artifactId>
+               <version>1.5.0</version>
+               <executions>
+                  <execution>
+                     <goals>
+                        <goal>exec</goal>
+                     </goals>
+                  </execution>
+               </executions>
+               <configuration>
+                  <executable>java</executable>
+                  <workingDirectory>${project.build.directory}/exec-working-directory</workingDirectory>
+                  <mainClass>org.activemq.jms.client.Main</mainClass>
+                  <!-- <systemProperties>
+                      <systemProperty>
+                          <key>java.logging.config.file</key>
+                          <value>./helloworld-jms-logging.properties</value>
+                      </systemProperty>
+                  </systemProperties> -->
+               </configuration>
+            </plugin>
+
+            <plugin>
                <groupId>org.apache.activemq</groupId>
                <artifactId>artemis-maven-plugin</artifactId>
-               <version>${artemis.plugin.version}</version>
+               <version>2.3.0</version>
                <executions>
                   <execution>
                      <id>create</id>
@@ -119,7 +143,7 @@
                         <goal>create</goal>
                      </goals>
                      <configuration>
-                        <ignore>false</ignore>
+                        <ignore>true</ignore>
                         <home>${project.basedir}/target/server</home>
                      </configuration>
                   </execution>
@@ -130,7 +154,7 @@
                      </goals>
                      <configuration>
                         <spawn>true</spawn>
-                        <ignore>false</ignore>
+                        <ignore>true</ignore>
                         <testURI>tcp://localhost:61616</testURI>
                         <args>
                            <param>run</param>
@@ -152,13 +176,20 @@
                         <goal>cli</goal>
                      </goals>
                      <configuration>
-                        <ignore>false</ignore>
+                        <ignore>true</ignore>
                         <args>
                            <param>stop</param>
                         </args>
                      </configuration>
                   </execution>
                </executions>
+               <dependencies>
+                  <dependency>
+                     <groupId>org.activemq.jms.queue.producer</groupId>
+                     <artifactId>artemis-jms-queue-producer</artifactId>
+                     <version>${project.version}</version>
+                  </dependency>
+               </dependencies>
             </plugin>
          </plugins>
 
