Added SSL option

--- a/src/main/resources/jndi.properties
+++ b/src/main/resources/jndi.properties
@@ -1,5 +1,5 @@
 java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialContextFactory
-connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF
+connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF;sslEnabled=true;keyStorePath=/Users/tomr/ssl/client/client.keystore.jks;keyStorePassword=-41e444c3ed07d6dd;trustStorePath=/Users/tomr/ssl/client/client.truststore.jks;trustStorePassword=-41e444c3ed07d6dd;needClientAuth=true
 #connectionFactory.ConnectionFactory=udp://231.7.7.7:9876?QUEUE_CF
 #connectionFactory.ConnectionFactory=failover:(tcp://jess:61616F,tcp://aza:61616)
 queue.jms/queue/inQueue=inQueue
