--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
    <groupId>org.activemq.jms.queue.producer</groupId>
    <artifactId>artemis-jms-queue-producer</artifactId>
-   <version>7.1.0</version>
+   <version>2.4.0.amq-711002-redhat-1</version>
 
    <properties>
 
@@ -18,7 +18,7 @@
       <jboss.logging.version>3.3.1.Final-redhat-1</jboss.logging.version>
       <jboss.log.manager.version>2.0.7.Final-redhat-1</jboss.log.manager.version>
 
-      <artemis.client.version>2.4.0.amq-710004-redhat-1</artemis.client.version>
+      <artemis.client.version>2.4.0.amq-711002-redhat-1</artemis.client.version>
 
       <!-- maven-jar-plugin -->
       <jar.plugin.version>3.0.2</jar.plugin.version>
@@ -38,6 +38,11 @@
    <dependencyManagement>
       <dependencies>
 
+         <dependency>
+            <groupId>org.apache.qpid</groupId>
+            <artifactId>qpid-jms-client</artifactId>
+            <version>0.31.0.redhat-2</version>
+         </dependency>
          <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-jms-client</artifactId>
@@ -64,6 +69,11 @@
    <dependencies>
 
       <dependency>
+         <groupId>org.apache.qpid</groupId>
+         <artifactId>qpid-jms-client</artifactId>
+      </dependency>
+
+     <dependency>
          <groupId>org.apache.activemq</groupId>
          <artifactId>artemis-jms-client</artifactId>
       </dependency>
@@ -122,7 +132,7 @@
                <configuration>
                   <executable>java</executable>
                   <workingDirectory>${project.build.directory}/exec-working-directory</workingDirectory>
-                  <mainClass>org.activemq.jms.client.Main</mainClass>
+                  <mainClass>org.acme.activemq.jms.client.Main</mainClass>
                   <!-- <systemProperties>
                       <systemProperty>
                           <key>java.logging.config.file</key>
@@ -167,7 +177,7 @@
                         <goal>runClient</goal>
                      </goals>
                      <configuration>
-                        <clientClass>org.activemq.jms.client.Main</clientClass>
+                        <clientClass>org.acme.activemq.jms.client.Main</clientClass>
                      </configuration>
                   </execution>
                   <execution>
