--- a/src/main/resources/jndi.properties
+++ b/src/main/resources/jndi.properties
@@ -3,6 +3,8 @@ java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialCont
 #connectionFactory.ConnectionFactory=udp://231.7.7.7:9876?QUEUE_CF
 #connectionFactory.ConnectionFactory=failover:(tcp://jess:61616F,tcp://aza:61616)
 #connectionFactory.ConnectionFactory=amqp://jess:5672
-connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF;groupID=pagz
+#connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF;groupID=pagz
+connectionFactory.ConnectionFactory=tcp://jess:61616?ha=true&retryInterval=1000&retryIntervalMultiplier=1.0&reconnectAttempts=-1
 queue.jms/queue/inQueue=inQueue
+queue.jms/queue/outQueue=outQueue
 queue.jms/queue/testQueue=testQueue
