Upgrade to AMQ 7.5.0

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,52 +1,20 @@
-# Specify the handlers to be loaded at the start up. Use comma to Separate multiple loggers.
-# The following creates two handlers
-
-#handlers = java.util.logging.FileHandler, java.util.logging.ConsoleHandler
-
-#handlers = java.util.logging.ConsoleHandler
-
-
-# Set the default global logging level for the root logger
-#Loggers and Handlers can override this logging level
-
-#.level = INFO
-
-# Set the default logging level for new ConsoleHandler instances
-
-#java.util.logging.ConsoleHandler.level = ALL
-
-# Set the default logging level for new FileHandler instances
-#java.util.logging.FileHandler.level = ALL
-#java.util.logging.FileHandler.pattern = %h/myApp.log
-#java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
-# Set the default formatter for new ConsoleHandler instances
-
-#java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
-
-#java.util.logging.SimpleFormatter.format = [%1$tH:%1$tM:%1$tS:%1$tL] %4$s:<%2$s> %5$s - %6$s%n
-#java.util.logging.SimpleFormatter.format = [%1$tH:%1$tM:%1$tS:%1$tL] %4$s: (%2$s) %5$s %6$s%n
-# Specify the logging level for a specific package.
-#com.tutorialswithexamples.examples.java.logger.logging = ALL
-
-#org.jboss.gss.jms.client.consumer.level=INFO
-#org.hornetq.useParentHandlers=true
-#org.hornetq.handlers={calss name}
-#org.hornetq.level=FINEST
-
-# Additional loggers to configure (the root logger is always configured)
-
-loggers=org.jboss.logging,org.apache.activemq.artemis.core.server,org.apache.activemq.artemis.utils,org.apache.activemq.artemis.journal,org.apache.activemq.artemis.jms.server,org.apache.activemq.artemis.integration.bootstrap,org.apache.activemq
+# Root logger option
+loggers=org.apache.activemq.artemis,org.jboss.logging,org.apache.activemq.artemis.core.server,org.apache.activemq.artemis.core,org.apache.activemq.artemis.utils,org.apache.activemq.artemis.journal,org.apache.activemq.artemis.jms,org.apache.activemq.artemis.ra
 
 # Root logger level
-logger.level=INFO
-# ActiveMQ Artemis logger levels
-logger.org.apache.activemq.artemis.core.server.level=TRACE
-logger.org.apache.activemq.artemis.journal.level=TRACE
-logger.org.apache.activemq.artemis.utils.level=TRACE
-logger.org.apache.activemq.artemis.jms.level=TRACE
-logger.org.apache.activemq.artemis.integration.bootstrap.level=TRACE
-logger.org.jboss.logging.level=INFO
-logger.org.apache.activemq.level=TRACE
+logger.level=TRACE
+# Apache ActiveMQ Artemis logger levels
+#logger.org.apache.activemq.artemis.level=TRACE
+#logger.org.apache.activemq.artemis.core.server.level=INFO
+#logger.org.apache.activemq.artemis.utils.level=INFO
+#logger.org.apache.activemq.artemis.jms.level=DEBUG
+
+#logger.org.apache.activemq.artemis.core.level=TRACE
+
+logger.org.apache.activemq.artemis.core.protocol.core.impl.level=trace
+logger.org.apache.activemq.artemis.core.client.level=trace
+logger.org.apache.activemq.artemis.core.client.impl.Topology=INFO
+
 # Root logger handlers
 logger.handlers=FILE,CONSOLE
 
@@ -58,13 +26,11 @@ handler.CONSOLE.autoFlush=true
 handler.CONSOLE.formatter=PATTERN
 
 # File handler configuration
-handler.FILE=org.jboss.logmanager.handlers.PeriodicRotatingFileHandler
+handler.FILE=org.jboss.logmanager.handlers.FileHandler
 handler.FILE.level=TRACE
-handler.FILE.properties=suffix,append,autoFlush,fileName
-handler.FILE.suffix=.yyyy-MM-dd
-handler.FILE.append=true
+handler.FILE.properties=autoFlush,fileName
 handler.FILE.autoFlush=true
-handler.FILE.fileName=producer.log
+handler.FILE.fileName=logs/activemq-client.log
 handler.FILE.formatter=PATTERN
 
 # Formatter pattern configuration
