--- a/src/main/resources/jndi.properties
+++ b/src/main/resources/jndi.properties
@@ -4,7 +4,7 @@ java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialCont
 #connectionFactory.ConnectionFactory=failover:(tcp://jess:61616F,tcp://aza:61616)
 #connectionFactory.ConnectionFactory=amqp://jess:5672
 #connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF;groupID=pagz
-connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF&ha=true&retryInterval=1000&retryIntervalMultiplier=1.0&reconnectAttempts=-1$sslEnable=false
+connectionFactory.ConnectionFactory=(tcp://jess:61616,tcp://aza:61616)?QUEUE_CF&ha=true&retryInterval=1000&retryIntervalMultiplier=1.0&reconnectAttempts=-1&sslEnable=false
 queue.jms/queue/queueOne=queueOne
 queue.jms/queue/queueTwo=queueTwo
 queue.jms/queue/inQueue=inQueue
