Fixed reconnect issue

--- a/src/main/resources/jndi.properties
+++ b/src/main/resources/jndi.properties
@@ -5,7 +5,7 @@ java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialCont
 #connectionFactory.ConnectionFactory=amqp://jess:5672
 #connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF;groupID=pagz
 #connectionFactory.ConnectionFactory=(tcp://jess:61616,tcp://aza:61616)?QUEUE_CF&ha=true&retryInterval=1000&retryIntervalMultiplier=1.0&reconnectAttempts=-1&sslEnable=false&callTimeout=3000&connectionTTL=1000&clientFailureCheckPeriod=1000
-connectionFactory.ConnectionFactory=tcp://rex:61616?QUEUE_CF&ha=true&retryInterval=1000&retryIntervalMultiplier=1.0&reconnectAttempts=-1&sslEnable=false&callTimeout=3000&connectionTTL=1000&clientFailureCheckPeriod=1000
+connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF&ha=true&retryInterval=1000&retryIntervalMultiplier=1.0&reconnectAttempts=-1&sslEnable=false&callTimeout=3000&connectionTTL=1000&clientFailureCheckPeriod=1000
 queue.jms/queue/queueOne=queueOne
 queue.jms/queue/queueTwo=queueTwo
 queue.jms/queue/inQueue=inQueue
