--- a/src/main/resources/jndi.properties
+++ b/src/main/resources/jndi.properties
@@ -5,9 +5,9 @@ java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialCont
 #connectionFactory.ConnectionFactory=amqp://jess:5672
 #connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF;groupID=pagz
 #connectionFactory.ConnectionFactory=(tcp://jess:61616,tcp://aza:61616)?QUEUE_CF&ha=true&retryInterval=1000&retryIntervalMultiplier=1.0&reconnectAttempts=-1&sslEnable=false&callTimeout=3000&connectionTTL=1000&clientFailureCheckPeriod=1000
-connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF&ha=true&retryInterval=1000&retryIntervalMultiplier=1.0&reconnectAttempts=-1&sslEnable=false&callTimeout=3000&connectionTTL=1000&clientFailureCheckPeriod=1000
-queue.jms/queue/queueOne=queueOne
-queue.jms/queue/queueTwo=queueTwo
+#connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF&ha=true&retryInterval=10000&retryIntervalMultiplier=1.0&reconnectAttempts=-1&sslEnable=false&callTimeout=10000&connectionTTL=10000&clientFailureCheckPeriod=10000
+#connectionfactory.ConnectionFactory = tcp://ex-aao-amq-0-svc-rte-amq-7-broker.apps-crc.testing:443?transport.keyStoreLocation=/home/tomr/Work/my-secret/client.ks&transport.keyStorePassword=secret&transport.trustStoreLocation=/home/tomr/Work/my-secret/client.ts&transport.trustStorePassword=secret&transport.verifyHost=false
+connectionFactory.ConnectionFactory=tcp://rex:61616
 queue.jms/queue/inQueue=inQueue
 queue.jms/queue/outQueue=outQueue
 queue.jms/queue/testQueue=testQueue
