Removed useJNDI property

--- a/src/main/resources/jndi.properties
+++ b/src/main/resources/jndi.properties
@@ -6,7 +6,10 @@ java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialCont
 #connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF;groupID=pagz
 #connectionFactory.ConnectionFactory=(tcp://jess:61616,tcp://aza:61616)?QUEUE_CF&ha=true&retryInterval=1000&retryIntervalMultiplier=1.0&reconnectAttempts=-1&sslEnable=false&callTimeout=3000&connectionTTL=1000&clientFailureCheckPeriod=1000
 #connectionFactory.ConnectionFactory=tcp://jess:61616?QUEUE_CF&ha=true&retryInterval=10000&retryIntervalMultiplier=1.0&reconnectAttempts=-1&sslEnable=false&callTimeout=10000&connectionTTL=10000&clientFailureCheckPeriod=10000
-#connectionfactory.ConnectionFactory = tcp://ex-aao-amq-0-svc-rte-amq-7-broker.apps-crc.testing:443?transport.keyStoreLocation=/home/tomr/Work/my-secret/client.ks&transport.keyStorePassword=secret&transport.trustStoreLocation=/home/tomr/Work/my-secret/client.ts&transport.trustStorePassword=secret&transport.verifyHost=false
+# 2way SSL
+#connectionfactory.ConnectionFactorySSL=tcp://ex-aao-amq-0-svc-rte-amq-7-broker.apps-crc.testing:443?transport.keyStoreLocation=/home/tomr/Work/my-secret/client.ks&transport.keyStorePassword=secret&transport.trustStoreLocation=/home/tomr/Work/my-secret/client.ts&transport.trustStorePassword=secret&transport.verifyHost=false
+# 1way SSL
+#connectionfactory.ConnectionFactorySSL=tcp://ex-aao-all-0-svc-rte-amq-broker-7.apps-crc.testing:443?sslEnabled=true&trustStorePath=/github/repos/cee/amq-broker-7/amq-broker-operator-7.8.0-ocp-install-examples/client-ts.jks&trustStorePassword=secret
 connectionFactory.ConnectionFactory=tcp://rex:61616
 queue.jms/queue/inQueue=inQueue
 queue.jms/queue/outQueue=outQueue
