Working SSL example

--- a/src/main/resources/jndi.properties
+++ b/src/main/resources/jndi.properties
@@ -9,7 +9,7 @@ java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialCont
 # 2way SSL
 #connectionfactory.ConnectionFactorySSL=tcp://ex-aao-amq-0-svc-rte-amq-7-broker.apps-crc.testing:443?transport.keyStoreLocation=/home/tomr/Work/my-secret/client.ks&transport.keyStorePassword=secret&transport.trustStoreLocation=/home/tomr/Work/my-secret/client.ts&transport.trustStorePassword=secret&transport.verifyHost=false
 # 1way SSL
-connectionFactory.ConnectionFactory=tcp://ex-aao-all-0-svc-rte-amq-broker-7.apps-crc.testing:443?sslEnabled=true&trustStorePath=/github/repos/cee/amq-broker-7/amq-broker-operator-7.8.0-ocp-install-examples/client-ts.jks&trustStorePassword=secret
+connectionFactory.ConnectionFactory=tcp://rex:61617?sslEnabled=true&trustStorePath=/Volumes/Home/tomr/Work/Examples/CEE/artemis-jms-queue-producer/src/main/resources/ssl/client.truststore&trustStorePassword=secret
 #connectionFactory.ConnectionFactory=tcp://rex:61616
 queue.jms/queue/inQueue=inQueue
 queue.jms/queue/outQueue=outQueue
